fixed hover effect for icon phone on mobile

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -37,7 +37,36 @@
 /* #endregion icon */
 
 .top-bar__icons {
-  position: relative; // потрібен для абсолютного позиціонування меню
+
+  .icon--phone {
+
+  }
+
+  .contacts-menu {
+    position: absolute;
+    top: -200%;
+    right: 100%;
+    background-color: transparent;
+    border-radius: 6px;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    width: max-content;
+    min-width: 250px;
+    z-index: 1;
+  }
+
+  // Поява меню при hover на іконку
+  .icon--phone:hover + .contacts-menu,
+  .contacts-menu:hover {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+
+  @include onDesktop {
+    position: relative; // потрібен для абсолютного позиціонування меню
 
   .icon--phone {
     position: relative;
@@ -67,4 +96,7 @@
     pointer-events: auto;
   }
 }
+}
+
+
 /* stylelint-enable */
